# CoThink

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  PRIVACY.md  README.md  TODO.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
e2e/: cothink.spec.ts
src/: App.tsx  main.tsx  store.ts  styles.css  types.test.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql
src-tauri/src/: ai.rs  cli_ai.rs  db.rs  lib.rs  main.rs  models.rs
src/components/: AICompanion.tsx  AIErrorNotice.tsx  CommentsPanel.tsx  InlineCommentBubbles.tsx  ReviewDialog.tsx  SelectionReviewMenu.tsx  SettingsDialog.tsx  Sidebar.tsx
src/editor/: BlockIdExtension.ts  EditorPane.tsx
src/lib/: anchor.test.ts  anchor.ts  companion.test.ts  companion.ts  debounce.test.ts  debounce.ts  document.test.ts  document.ts  errors.test.ts  errors.ts  models.test.ts  models.ts
src/services/: api.test.ts  api.ts
src/test/: setup.ts
