[package]
name = "cothink"
version = "0.1.0"
description = "A human-led thinking notebook"
authors = ["cothink contributors"]
edition = "2021"

[lib]
name = "cothink_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.11.1", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.38", features = ["bundled-full"] }
uuid = { version = "1.21", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
keyring = { version = "3.6", features = ["windows-native", "apple-native", "sync-secret-service"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
sha2 = "0.10"
hex = "0.4"
tokio = { version = "=1.48.0", features = ["sync", "macros", "process", "io-util", "time"] }

[dev-dependencies]
tempfile = "3"
